feat(poem): 新增诗词体裁管理
